[package]
name = "foldy"
version = "0.1.0-alpha.2"
authors = ["Walter Pearce <jaynus@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/jaynus/foldy"
description ="Placeholder for a crate"

[features]
std = []
memory = []

default = ["std", "memory"]

[dependencies]
thiserror = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.6"
features = [ "console", "FileSystem" ]